--- a/MathQuiz/app/src/main/res/values/strings.xml
+++ b/MathQuiz/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="message">"something intelligent</string>
     <string name="info">abcdefghijklmnopqrstuvwxyz</string>
     <string name="true_button">true_button </string>
+    <string name="false_button">false_button</string>
+    <string name="correct_toast">Correct!</string>
+    <string name="incorrect_toast">Incorrect!</string>
+    <string name="action_settings">Settings</string>
 </resources>
