--- a/MathQuiz/app/src/main/res/values/strings.xml
+++ b/MathQuiz/app/src/main/res/values/strings.xml
@@ -2,9 +2,14 @@
     <string name="app_name">MathQuiz</string>
     <string name="message">"something intelligent</string>
     <string name="info">abcdefghijklmnopqrstuvwxyz</string>
-    <string name="true_button">true_button </string>
-    <string name="false_button">false_button</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
+    <string name="next_button">Next</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
     <string name="action_settings">Settings</string>
+    <string name="question_true">This is true.</string>
+    <string name="question_false">This is false.</string>
+    <string name="question_trick">This is a trick question.</string>
+
 </resources>
