--- a/MathQuiz/app/src/main/res/values/strings.xml
+++ b/MathQuiz/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="question_sub">5 - 2 = ?</string>
     <string name="question_mult">4 x 2 = ?</string>
     <string name="question_div">16 / 2 = ?</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgement_toast">I am disappointed in you.</string>
 </resources>
