--- a/MathQuiz/app/src/main/res/values/strings.xml
+++ b/MathQuiz/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="warning_text">Are you sure you want to do this?</string>
     <string name="show_answer_button">Show Answer</string>
     <string name="cheat_button">Cheat!</string>
-    <string name="judgement_toast">I am disappointed in you.</string>
+    <string name="judgement_toast">God is disappointed in you.</string>
+    <string name="title_activity_cheat">Cheat</string>
 </resources>
