--- a/LY_Softball/app/src/main/res/values/strings.xml
+++ b/LY_Softball/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LY_Softball</string>
+    <string	name="hello_world">Hello	world!</string>
+    <string	name="action_settings">Settings</string>
+    <string	name="softball_title_hint">Enter a title for the crime.</string>
 </resources>
