--- a/LY_Softball/app/src/main/res/values/strings.xml
+++ b/LY_Softball/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string	name="hello_world">Hello	world!</string>
     <string	name="action_settings">Settings</string>
     <string	name="softball_title_hint">Enter a title for the crime.</string>
+    <string name="softball_title_label">Title</string>
+	<string name="softball_details_label">Details</string>
+	<string name="softball_here_label">Here</string>
 </resources>
