--- a/LY_Softball/app/src/main/res/values/strings.xml
+++ b/LY_Softball/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
     <string name="app_name">LY_Softball</string>
-    <string	name="hello_world">Hello	world!</string>
     <string	name="action_settings">Settings</string>
-    <string	name="softball_title_hint">Enter a title for the crime.</string>
-    <string name="softball_title_label">Title</string>
+    <string name="softball_title_label">Add A Player</string>
+    <string	name="softball_last_name_hint">Last Name</string>
+    <string	name="softball_first_name_hint">First Name</string>
+    <string name="softball_jersey_hint">Jersey Number</string>
 	<string name="softball_details_label">Details</string>
-	<string name="softball_here_label">Here</string>
+	<string name="softball_pitcher">Pitcher</string>
+    <string name="softball_catcher">Catcher</string>
+    <string name="softball_infield">Infield</string>
+    <string name="softball_outfield">Outfield</string>
+    <string name="symbol_catcher">Catcher</string>
+    <string name="symbol_pitcher">Pitcher</string>
+    <string name="symbol_outfield">Outfield</string>
+    <string name="symbol_infield">Infield</string>
+    <string name="softball_select_pos">Select a Position</string>
 </resources>
